Added description of new functional, bump version to 0.0.2

--- a/README.rdoc
+++ b/README.rdoc
@@ -8,15 +8,79 @@ The idea of this gem is experimenting with meta-programming abilities of Ruby. I
 
 Firstly I should tell you about syntax. It's not really recipe from all problems, but now we can tell something to Rails:
 
+### Model methods
+
+1.  Execute scope method or model method with writing it in variable with generated name
+
+    ```ruby
+    # regular variant:
+    @scope_name_table_name = TableName.scope
+
+    # with Spik:
+    find scope_name [from] table_name
+    # or
+    scope_name [from] table_name
+    ```
+
+    for example with your table posts (and model Post with :popular scope):
+
+    ```ruby
+    # regular variant:
+    @popular_posts = Post.popular
+
+    # with Spik:
+    find popular posts
+    # or
+    popular posts
+    # or
+    find popular from posts
+    ```
+
+2.  Execute scope method or model method with writing it in variable with custom name
+
+    ```ruby
+    # regular variant:
+    @custom_variable_name = TableName.scope
+
+    # with Spik:
+    find scope_name [from] table_name as custom_variable_name
+    # or
+    scope_name [from] table_name as custom_variable_name
+    ```
+
+    for example with your table posts (and model Post with :popular scope):
+
+    ```ruby
+    # regular variant:
+    @my_posts = Post.popular
+
+    # with Spik:
+    find popular posts as my_posts
+    # or
+    popular posts as 'my_posts'
+    # or
+    find popular from posts as my_posts
+    ```
+
+### Select
+
 1.  Simple select from table:
 
     ```ruby
+    # regular variant:
+    @table_name = TableName.find(:all)
+
+    # with Spik:
     find all table_name
     ```
 
     for example with your table posts (and model Post):
 
     ```ruby
+    # regular variant:
+    @posts = Post.find(:all)
+
+    # with Spik:
     find all posts
     ```
 
@@ -25,12 +89,20 @@ Firstly I should tell you about syntax. It's not really recipe from all problems
 2.  Select first row from your table:
 
     ```ruby
+    # regular variant:
+    @table_name_row = TableName.find(:first)
+
+    # with Spik:
     find first table_name_row
     ```
 
     for example with your table posts (and model Post):
 
     ```ruby
+    # regular variant:
+    @post = Post.find(:first)
+
+    # with Spik:
     find first post
     ```
 
@@ -39,12 +111,20 @@ Firstly I should tell you about syntax. It's not really recipe from all problems
 3.  Select rows from table with some condition:
 
     ```ruby
-    find all table_name (with|which has|which have) (attribute_name) (id as numeric|'string in quotes')
+    # regular variant:
+    @table_name = TableName.find(:all, :conditions => ['attribute = ?', value])
+
+    # with Spike:
+    find all table_name (with|which has|which have|who have|who has) (attribute_name) (id as numeric|'string in quotes')
     ```
 
     for example with your table posts (and model Post) and table has attribute title:
 
     ```ruby
+    # regular variant:
+    @posts = Post.find(:all, :conditions => ['title = ?', 'asdf'])
+
+    # with Spik:
     find all posts with title 'asdf'
     ```
 
@@ -53,12 +133,20 @@ Firstly I should tell you about syntax. It's not really recipe from all problems
 4.  Select rows from table with new name of instance variable:
 
     ```ruby
-    find all table_name as what_you_want_your_variable_name (with|which has|which have) (attribute_name) (id as numeric|'string in quotes')
+    # regular variant:
+    @what_you_want_your_variable_name = TableName.find(:all)
+
+    # with Spik:
+    find all table_name as what_you_want_your_variable_name (with|which has|which have|who have| who has) (attribute_name) (id as numeric|'string in quotes')
     ```
 
     for example with your table posts (and model Post) and table has attribute title:
 
     ```ruby
+    # regular variant:
+    @special_posts = Post.find(:all)
+
+    # with Spik:
     find all posts as special_posts
     ```
 
@@ -67,20 +155,76 @@ Firstly I should tell you about syntax. It's not really recipe from all problems
 5.  Select rows from table with attribute like something:
 
     ```ruby
-    find all table_name like attribute_name like 'something'
+    # regular variant:
+    @table_name = TableName.find(:all, :conditions => ['attribute LIKE "%?%"', value])
+
+    # with Spik:
+    find all table_name with attribute_name like 'something'
     ```
 
     for example with your table posts (and model Post) and table has attribute title:
 
     ```ruby
+    # regular variant:
+    @posts = Post.find(:all, :conditions => ['title LIKE "%?%"', 'asd'])
+
+    # with Spik:
     find all posts with title like 'asd'
     ```
 
     After this you have initiated instance variable in your controller @posts with items which have title like 'asd' (asdf|qweasdf|asd|...), and you can use it in your views and later in controller
 
-## Older usage
+### Delete
+
+1.  Delete all rows from table with attribute equals something:
+
+    ```ruby
+    # regular variant:
+    TableName.delete_all(['attribute = ?', value])
+
+    # with Spik:
+    delete all table_name with attribute_name 'something'
+    ```
+
+    for example with your table posts (and model Post) and table has attribute title:
+
+    ```ruby
+    # regular variant:
+    Post.delete_all(['title = ?', 'asd'])
+
+    # with Spik:
+    delete all posts with title 'asd'
+    ```
+
+    After this all posts rows with title 'asd' will be deleted
+
+2.  Delete row from table with specific id:
+
+    ```ruby
+    # regular variant:
+    TableName.delete(id)
+
+    # with Spik:
+    delete [first] table_name_row with id (numeric)
+    ```
+
+    for example with your table posts (and model Post):
+
+    ```ruby
+    # regular variant:
+    Post.delete(5)
+
+    # with Spik:
+    delete post with id 5
+    ```
+
+    After this post row with id 5 will be deleted
+
+### Usage in project
 
 If you want to get all your posts, you just include Spik module in controller and write 'find all posts':
+
+*app/controllers/home_controller.rb*
 
 ```ruby
 class HomeController < ApplicationController
@@ -99,6 +243,8 @@ end
 
 After that you can work with variables @post and @posts:
 
+*app/views/home/index.html.erb*
+
 ```erb
 <h1>Hello Spik!</h1>
 <%- if @posts %>
@@ -114,13 +260,13 @@ After that you can work with variables @post and @posts:
 Puts this line into `Gemfile` then run `$ bundle`:
 
 ``` ruby
-gem 'spik', '0.0.1'
+gem 'spik', '0.0.2'
 ```
 
 Or if you are old-school Rails 2 developer put this into `config/environment.rb` and run `$ rake gems:install`:
 
 ``` ruby
-config.gem 'spik', :version => '0.0.1'
+config.gem 'spik', :version => '0.0.2'
 ```
 
 Or manually install spik gem: `$ gem install spik`
